[gd_scene load_steps=7 format=3 uid="uid://dv632goeiasr2"]

[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="1_4a83h"]
[ext_resource type="Script" uid="uid://dsqbda3jfmkrb" path="res://scenes/enemy/enemy.gd" id="1_tjssy"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/arrow.png" id="2_40wdo"]
[ext_resource type="PackedScene" uid="uid://bxxba74w2scpj" path="res://scenes/ui/stats_ui.tscn" id="3_tjssy"]
[ext_resource type="PackedScene" uid="uid://c658wldj6alnr" path="res://scenes/ui/intent_ui.tscn" id="5_gl05p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agsc7"]

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_tjssy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4a83h")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, 0)
rotation = -1.5708
texture = ExtResource("2_40wdo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_agsc7")

[node name="StatsUI" parent="." instance=ExtResource("3_tjssy")]
offset_top = 11.0
offset_bottom = 27.0

[node name="IntentUI" parent="." instance=ExtResource("5_gl05p")]
offset_left = -21.0
offset_top = -28.0
offset_right = 19.0
offset_bottom = -11.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
